Fix mobile font size/spacing

--- a/src/app/css/app.scss
+++ b/src/app/css/app.scss
@@ -5,7 +5,7 @@ html {
   line-height: 1.7;
 
   @media (max-width: 640px) {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
