--- a/src/app/css/content.scss
+++ b/src/app/css/content.scss
@@ -233,6 +233,7 @@
         @media (max-width: 640px) {
           margin-left: -2.75em;
           margin-right: -0.5em;
+          padding: $mobile-content-padding;
         }
       }
     }
