--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -66,6 +66,7 @@ $sidebar-width: 280px;
 $content-padding: 80px;
 $nav-height: $content-padding - 9px;
 $tablet-content-padding: 40px;
+$mobile-content-padding: 20px;
 $content-width: 46em;
 $media-player-width: 350px;
 $max-width: 1280px;
